--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -587,6 +587,26 @@
  PRK.2.d:0 "우리 공화국의 소식을 들은 독립운동가들이 하나 둘 입국을 신청하기 시작했습니다. 이들은 우리 국가에 큰 도움이 될 것입니다!"
  PRK.2.a:0 "공화국에 잘 왔습네다, 동지."
  
+ PRK.4.t:0 "조선의 미래"
+ PRK.4.d:0 "무슨 이유에서인지는 모르겠지만 우리는 약 반세기전으로 이동했습니다. 남한은 혼란의 도가니에 빠져있으며 눈엣가시였던 미군은 구닥다리 무기따위로나 무장한상태입니다. 이것은 우리에게 새로운 기회가 될수도있습니다."
+ PRK.4.a:0 "알겠음."
+ 
+ PRK.11.t:0 "독립운동가들과 접촉"
+ PRK.11.d:0 "."
+ PRK.11.a:0 ""
+ 
+ PRK.12.t:0 "정통사회주의파의 움직임"
+ PRK.12.d:0 "김일성이 통치하는 현재의 조선은 썩어 문들어졌습니다. 사회주의를 버린 조선은 점점 피폐해져가고있으며 주체사상이라는 수정주의적인 이념을 통치이념으로 내새우고있습니다. 우리는 정통 마르크스-레닌주의를 받아들여 조선을 개혁해야합니다.\n\n§G쿠데타를위한 준비과정을 해금합니다.§! §R너무 질질끌고 거사를 머뭇거리면 김정일이 눈치를챌것입니다!!§!"
+ PRK.12.a:0 "알겠음."
+ 
+ PRK.14.t:0 "중대회의"
+ PRK.14.d:0 "인민무력부 8호동 회의실에서 중대한 회의가있다는 연락을받고 프룬제 군사대학출신 유학파들이 도착하자 조선인민군 보위국의 지휘를받는 작전조가 투입되어 주요요인체포,사살을 시도했습니다. 우리가 머뭇거리는사이 김정일이 선수를 치고말았습니다."
+ PRK.14.a:0 "제기랄!!"
+
+ PRK.15.t:0 "내전!!"
+ PRK.15.d:0 "쿠데타 지도부를 잃었지만 다행이 일부 조직은 탈출에 성공하여 쿠데타를위해 준비한 군단의 사령부로 긴급명령을 전송하였습니다. '김정일에게 발각되었다. 즉시 무기를들고 평양으로 진군하라.' 이제 내전은 피할수없게 되었습니다."
+ PRK.15.a:0 "큰일이군"
+ 
  PRK.24.t:0 "일본이 조건부 항복을 제안하다"
  PRK.24.desc:0 "일본은 공식적으로 평화를 제의하기 위해 접촉해왔습니다. 우리가 요구했던 일본공산당의 집권, 규슈와주고쿠,시고쿠의 할양 일본함대일부를 조선인민해군에 편입하는것에 동의하였습니다. 대신그들은 더이상의 적대행위중지 약속과 천황왕실의 안전보장을 요청하였습니다."
  PRK.24.a:0 "좋아. 평화에 서명한다"
