--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -625,6 +625,13 @@
  PRK.27.desc:0 "조약의 항목에따라, 일부 구일본제국 군함들이 오늘 새로이 조선인민해군에 편입되었습니다. 우리는 이 함선들을 요긴하게 사용할수있을겁니다, 또한 대함미사일의 장착과,우리의 제트기가 이 구식항공모함에서 운용이 가능한지 실험해보아야 할것입니다"
  PRK.27.a:0 "확인."
  
+ PRK.30.t:0 "국지전이 발생하다!!!"
+ PRK.30.desc:0 "누가먼저 발포했는지는 확실치 않지만, 남조선과의 국지전이 발생하였습니다. 현재 우리군이 대응에 나서고있으며, 우리는 이를 선전으로써 유용히 사용할수있을것입니다."
+ PRK.30.a:0 "남조선놈들이 드디어 맛이 갔구만!!"
+ 
+ PRK.31.t:0 "작전명 폭풍"
+ PRK.31.desc:0 "모든준비는 완료되었습니다. 우리 공작원들은 작전준비를 마쳤으며 남조선에대한 대대적인 테러작전을 시행할 준비가 완료되었습니다. 우리군의 포대는 남조선을 향해 발포할준비를 마쳤으며 우리의 땅크부대들은 진격명령만을 기다리고있습니다. 명령을 내려주십시오."
+ PRK.31.a:0 "공격앞으로!"
  
  PRK.32.t:0 "수도 이전"
  PRK.32.desc:0 "다시 통일된 조국을 만들었으니 우리는 현재, 북쪽으로 치우쳐진 평양을 대신하여 수도를 지정해야 합니다. \n후보지는 총 3곳\n\n서울\n개성\n평양\n\n입니다."
@@ -632,10 +639,101 @@
  PRK.32.b:0 "'개성'으로 변경"
  PRK.32.c:0 "'평양'으로 유지"
  
+ PRK.45.t:0 "간첩의 침투"
+ PRK.45.desc:0 "최근 북한의 대남한 무장간첩 침투빈도가 늘어나고있습니다. 무장간첩을 그대로 놔둔다면 전시상황시 우리에게 큰 불이익을 줄수있습니다. 우리는 이를 막아야합니다."
+ PRK.45.a:0 "대응방안을 모색해야겠군."
  
  PRK.43.t:0 "김일성 사망"
- PRK.43.desc:0 ""지난 1994년(1939년) 7월 8일, 조선민주주의인민공화국의 최고 지도자이시자 최고지도자이신 김일성 동지께서 서거하셨습니다. 비통한 마음으로 이 소식을 전하며, 목놓아 곡을 올립니다."\n\n김일성이 사망하였습니다. 후계는 김정일이 잇습니다."
+ PRK.43.desc:0 "지난 1994년(1939년) 7월 8일, 조선민주주의인민공화국의 최고 지도자이시자 최고지도자이신 김일성 동지께서 서거하셨습니다. 비통한 마음으로 이 소식을 전하며, 목놓아 곡을 올립니다."\n\n김일성이 사망하였습니다. 후계는 김정일이 잇습니다."
  PRK.43.a:0 "안녕히가세요, 수령동지."
+ 
+ Spy.1.t:0 "성공적인 민간 간첩침투"
+ Spy.1.d:0 "우리의 간첩들은 성공적으로 민간행정에 침투하였고 곧 정보를 수집하며 활동을 개시할것입니다."
+ Spy.1.a:0 "훌륭하다."
+ 
+ Spy.2.t:0 "민간 간첩침투 대성공"
+ Spy.2.d:0 "우리의 간첩들은 혁명적으로 민간행정에 대규모로 침투하였고 곧 정보를 수집하며 활동을 개시할것입니다."
+ Spy.2.a:0 "훌륭하다."
+ 
+ Spy.3.t:0 "성공적인 군사 간첩침투"
+ Spy.3.d:0 "우리의 간첩들은 성공적으로 군대에 침투하였고 곧 정보를 수집하며 활동을 개시할것입니다."
+ Spy.3.a:0 "훌륭하다."
+ 
+ Spy.4.t:0 "군사 간첩침투 대성공"
+ Spy.4.d:0 "우리의 간첩들은 혁명적으로 군대에 대규모로 침투하였고 곧 정보를 수집하며 활동을 개시할것입니다."
+ Spy.4.a:0 "훌륭하다."
+ 
+ Spy.5.t:0 "군사부문 간첩색출 대성공"
+ Spy.5.d:0 "정보기관과 국군 기무사령부의 끈질긴 추적끝에, 군대내부에 침투한 다수의 간첩무리의 검거를 성공하였습니다. 이는 국내의 간첩들에게 재앙을 가져다 줄 것입니다."
+ Spy.5.a:0 "남은 빨갱이들도 전부 잡아내라."
+ 
+ Spy.6.t:0 "군사부문 간첩색출 성공"
+ Spy.6.d:0 "정보기관과 기무사령부의 공조하에, 군대내부에 침투한 간첩 검거를 성공하였습니다."
+ Spy.6.a:0 "모든 빨갱이들을 잡아낼때까지."
+ 
+ Spy.7.t:0 "민간부문 간첩색출 대성공"
+ Spy.7.d:0 "정보기관의 끈질긴 추적,수사망을 좁혀오는 경찰기관의 공조하에 우리 행정부에 침투한 다수의 간첩무리의 검거를 성공하였습니다. 이는 국내의 간첩들에게 재앙을 가져다 줄 것입니다."
+ Spy.7.a:0 "남은 빨갱이들도 전부 잡아내라."
+ 
+ Spy.8.t:0 "민간부문 간첩색출 성공"
+ Spy.8.d:0 "경찰의 수사망이 점점좁혀오고, 우리행정부에 침투한 간첩의 검거를 성공하였습니다."
+ Spy.8.a:0 "모든 빨갱이들을 잡아낼때까지."
+ 
+ Spy.9.t:0 "체포된 우리의 공작원"
+ Spy.9.d:0 "침투를시도한 우리의 공작원이 남조선의 경계태세를 뚫지못하고 검거되었습니다.."
+ Spy.9.a:0 "멍청한놈!!"
+ 
+ Spy.10.t:0 "기반시설 사보타주"
+ Spy.10.d:0 "불명의 무장세력이 국내의 도로,철도및 기반시설에대해 대대적인 공격을 감행했습니다. 곳곳에서 피해보고가 들어오고있습니다."
+ Spy.10.a:0 "이런제길!!"
+ 
+ Spy.11.t:0 "군사공장 사보타주"
+ Spy.11.d:0 "조선인민군 소속 특수부대로 추정되는 무장세력이 우리의 군장비창에대한 공격을 개시하였습니다."
+ Spy.11.a:0 "빌어먹을 빨갱이놈들!!"
+ 
+ Spy.12.t:0 "민간공업 사보타주"
+ Spy.12.d:0 "조선인민군 소속 특수부대로 추정되는 무장세력이 우리의 기업에대해 공격을 개시하였습니다. 무장세력이 행정부 건물로 쳐들어왔고,기업들의 본사건물이 폭탄테러를 당하는등 패해가 속출하고있습니다."
+ Spy.12.a:0 "빌어먹을 빨갱이놈들!!"
+ 
+ Spy.13.t:0 "공항 폭파"
+ Spy.13.d:0 "불명의 무장세력이 각지의 국제공항,군사공항에대해 폭탄테러를 시도했고 활주로가 불타는등 피해를 입었습니다."
+ Spy.13.a:0 "빌어먹을 빨갱이놈들!!" 
+ 
+ Spy.14.t:0 "발전소 폭파"
+ Spy.14.d:0 "불명의 무장세력이 각지의 발전소를 공격하였고 대규모 정전사태가 발생하였습니다. 군의 작전에 거대한차질이 생겼습니다!!"
+ Spy.14.a:0 "빌어먹을 빨갱이놈들!!" 
+ 
+ Spy.15.t:0 "남조선의 방첩기관 확장"
+ Spy.15.d:0 "남조선놈들이 우리의 간첩침투에 대항해 정보기관,경계태세를 강화하였습니다. 앞으로의 작전에 문제가 생길수도있습니다."
+ Spy.15.a:0 "아쉽군." 
+ 
+ Spy.16.t:0 "무장간첩의 교란"
+ Spy.16.d:0 "짓돗개하나가 발령되고,각사단들에 전투테세 명령이 하달되었지만, 일부명령이 제대로 전달되지않고,엉뚱한명령이 전달되는듯 전방사단들이 혼란의도가니에 빠졌습니다."
+ Spy.16.a:0 "제길!!" 
+ 
+ Spy.17.t:0 "국군에 침투한 특수부대"
+ Spy.17.d:0 "일부 병사들이 국군으로 위장한 조선인민군 특수부대를 목격하는등 혼란이 더해지고있습니다."
+ Spy.17.a:0 "제길!!" 
+ 
+ Spy.18.t:0 "국군에 침투한 특수부대"
+ Spy.18.d:0 "국군으로 위장한 특수부대가 국군을 후방에서 대규모로 교란하고있습니다. 우리의 사단들은 효과적인 방어작전을 수행할수가없습니다!!"
+ Spy.18.a:0 "제길!!" 
+ 
+ Spy.19.t:0 "국군에 침투한 특수부대"
+ Spy.19.d:0 "국군으로 위장한 대규모 특수부대가 아군을 사격하여 아군끼리의 교전을 유도하고,통신선을절단하는등 대규모로 우리를 교란하고있습니다. 우리의 사단들은 효과적인 방어작전을 수행할수가없습니다!!"
+ Spy.19.a:0 "제길!!" 
+ 
+ Spy.20.t:0 "공군에 침투한 특수부대"
+ Spy.20.d:0 "국군으로 위장한 특수부대가 우리를 교란하고있습니다. 우리의 공군기들에게 대규모 혼란을 주고있습니다!!"
+ Spy.20.a:0 "제길!!" 
+ 
+ Spy.21.t:0 "해군에 침투한 특수부대"
+ Spy.21.d:0 "국군으로 위장한 특수부대가 우리를 교란하고있습니다. 우리의 해군함정들에게 대규모 혼란을 주고있습니다!!"
+ Spy.21.a:0 "제길!!" 
+ 
+ Spy.23.t:0 "간첩검거 실패"
+ Spy.23.d:0 "정보기관의 분투에도 불구하고, 용의자는 우리의 수사망을 빠져나가 잠적하고 말았습니다. 이것은 치명적인 실책입니다!!"
+ Spy.23.a:0 "망할.." 
  
  ##########################
  rok_civ.1.t:0 "긴급 보안법"
