--- a/localisation/replace/kor_decisions_l_english.yml
+++ b/localisation/replace/kor_decisions_l_english.yml
@@ -136,6 +136,30 @@
  Gangwon_Underground_Tunnel:0 "강원도 땅굴강화"
  PRK_provocations_against_the_south:0 "대남한 군사도발"
  prk_coop_lvl_up:0 "§G쿠데타를위한 준비과정을 완료합니다§!"
+ prk_coop_start:0 "§G모든 준비과정이 완료되었을때, 거사를 개시합니다§!"
+ prk_troop_strength_1:0 "38선에 새로운 요새를 건설합니다"
+ 
+ civ_spy:0 "민간 행정에 침투"
+ arm_spy:0 "군대에 침투"
+ imp_civ_spy:0 "민간 행정에 침투"
+ imp_arm_spy:0 "군대에 침투"
+ Infrastructure_Sabotage:0 "기반시설 파괴공작"
+ civ_fac_Sabotage:0 "민간기업 사보타주"
+ arm_fac_Sabotage:0 "군수공업 사보타주"
+ Blast_the_airfield:0 "비행장 폭파"
+ power_plant:0 "발전소 폭파"
+ Forward_Division_Disturbance:0 "전방사단 일부 교란"
+ military_spy_few_dec:0 "국군에 소규모 침투"
+ military_spy_medium_dec:0 "국군에 중규모 침투"
+ military_spy_large_dec:0 "국군에 대규모 침투"
+ infiltration_into_the_air_force:0 "공군에 침투"
+ infiltration_into_the_navy:0 "해군에 침투"
+ Improved_organization:0 "정보기관 강화"
+ infiltration_into_the_air_force:0 "공군에 침투"
+ infiltration_into_the_navy:0 "해군에 침투"
+ Improved_organization:0 "정보기관 강화"
+ Counterintelligence_armspy:0 "군대내의 간첩색출"
+ Counterintelligence_civspy:0 "민간행정내의 간첩색출"
  
  PRK_food_cris_cat:0 "식량난 위기"
  PRK_food_cris_cat_desc:0 "모든 수단과 방법을 동원하였어도, 결국 식량난이 닥쳐오고 있습니다. 사회주의의 가장 중요한 부분 중 하나인 배급제가 철폐되면, 인민들의 삶의 질이 나락으로 쳐박힐 것입니다.\n\n그 전에 우리는 이 문제를 어떻게든 해결해야 합니다."
