--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -735,6 +735,47 @@
  Spy.23.d:0 "정보기관의 분투에도 불구하고, 용의자는 우리의 수사망을 빠져나가 잠적하고 말았습니다. 이것은 치명적인 실책입니다!!"
  Spy.23.a:0 "망할.." 
  
+ 
+ PRK_prov.1.t:0 "성공적인 포격도발"
+ PRK_prov.1.d:0 "우리 공화국의 위대한 포병들은 남조선괴뢰군들을 성공적으로 타격하였으며 적의 포진지가 불타오르고있습니다!!"
+ PRK_prov.1.a:0 "아주 훌륭하다!" 
+ 
+ PRK_prov.2.t:0 "성공적인 NLL침투"
+ PRK_prov.2.d:0 "우리 함정들이 성공적으로 NLL을 넘었으며 남조선의 대응을 살펴본뒤 복귀하였습니다."
+ PRK_prov.2.a:0 "좋군!" 
+ 
+ PRK_prov.3.t:0 "성공적인 공군 도발"
+ PRK_prov.3.d:0 "우리 공군이 적의 영공가까이까지 접근했으며 요격을하러 출동한 남조선의 항공기들과 접촉한뒤 복귀하였습니다. 한동안 남조선은 불안에 덜덜 떨것입니다."
+ PRK_prov.3.a:0 "훌륭하다!" 
+ 
+ PRK_prov.4.t:0 "반격당한 포격도발!!"
+ PRK_prov.4.d:0 "방금 교전에서 우리의 포병이 대포병사격을받아 타격당했습니다!! 현재 사상자를 집계중이며 남조선은 축제분위기인것 같습니다."
+ PRK_prov.4.a:0 "책임자를 데려와라!!"
+ 
+ PRK_prov.5.t:0 "반격당한 해군도발!!"
+ PRK_prov.5.d:0 "우리의 함정이 NLL을넘자, 남조선은 즉각 고속정과 초계함을 파견하여 우리의 남하를 저지하려했습니다. 저들이 우리함선을 충각전술까지 사용하여 적극대응하는 바람에 우리는 별소득없이 철수해야만 했습니다."
+ PRK_prov.5.a:0 "책임자를 데려와라!!"
+ 
+ PRK_prov.6.t:0 "반격당한 항공기도발!!"
+ PRK_prov.6.d:0 "우리의 공군기가 영공을 넘으려하는 동시에 남한의 요격기가 즉각대응하는바람에 별소득없이 철수해야만 했습니다."
+ PRK_prov.6.a:0 "책임자를 데려와라!!"
+ 
+ PRK_prov.7.t:0 "북한의 도발에 성공적으로 대응하다!"
+ PRK_prov.7.d:0 "우리군이 북한에도발에대해 성공적으로 대응하면서 북한군은 별소득없이 철수해야만했습니다. 이는 우리의 위대한 승리입니다!"
+ PRK_prov.7.a:0 "잘했다!"
+ 
+ PRK_prov.8.t:0 "국지전에서 승리하다"
+ PRK_prov.8.d:0 "우리군이 최근발생한 국지전에서 승리햐먄서 적은 패퇴해야했습니다 우리의 위대한 승리입니다!"
+ PRK_prov.8.a:0 "잘했다!"
+ 
+ PRK_prov.9.t:0 "국지전에서 패배하다"
+ PRK_prov.9.d:0 "우리군이 최근발생한 국지전에서 패배하여 퇴각해야했습니다. 하지만 우리는 이를 남침명분으로써 사용할수있을것입니다."
+ PRK_prov.9.a:0 "아쉽군."
+ 
+ PRK_prov.10.t:0 "국지전에서 패배하다"
+ PRK_prov.10.d:0 "우리군이 최근발생한 국지전에서 패배하여 퇴각해야했습니다. 군지도부는 적잖아 충격을받은 모양입니다."
+ PRK_prov.10.a:0 "지휘관은 경질될것이다!"
+ 
  ##########################
  rok_civ.1.t:0 "긴급 보안법"
  rok_civ.1.d:0 "하나회를 비롯한 반군과의 내전이 시작되었습니다. 거리는 파괴되고 있으며 국가는 비상사태에 들어갔습니다.\n\n국민의 권한을 일시적으로 제한합니다."
