--- a/localisation/replace/kor_focus_l_english.yml
+++ b/localisation/replace/kor_focus_l_english.yml
@@ -1,36 +1,61 @@
 ﻿l_english:
  # Focus Name
  KOR_world_1936:0 "1936년의 세계"
+ KOR_world_1936_desc:0 "1991년의 말, 우리는 재야의 종 소리를 들으며 기분좋은 신년을 기념하기 위하여 들떠있었습니다. 그러나 1월 1일 12시 00분이 된 그때, 어떤 위화감이 지나갔습니다. 모든 연락망과 전파가 두절되었으며 무선통신망이 완전히 망가졌습니다. 도대체, 이게 무슨 일인지.."
  KOR_intel:0 "정보 수집"
+ KOR_intel_desc:0 "믿기 어려운 이야기지만, 일본제국의 함선이 돌아다니는 것과 모든 무선통신망이 두절된 것. 인공위성이 작동되지 않는 것을 보아하니 어떤 '특수한' 힘이 한반도에 작용한 것 같습니다. \n더욱 자세한 정보를 알기 위하여 모든 자산들을 총동원해야 할 것입니다."
  KOR_martial_law:0 "비상계엄령 선포"
+ KOR_martial_law_desc:0 ""
  KOR_NA_Occupation:0 "국회점거"
+ KOR_NA_Occupation_desc:0 ""
  KOR_press_control:0 "언론 통제"
+ KOR_press_control_desc:0 ""
  KOR_airport_closure:0 "공항,항구폐쇄"
+ KOR_airport_closure_desc:0 ""
  KOR_USFK_issue:0 "주한미군문제"
+ KOR_USFK_issue_desc:0 ""
  KOR_suppression_order:0 "시민운동 진압명령"
+ KOR_suppression_order_desc:0 ""
  
  Countermeasure_Conference:0 "대책회의"
+ Countermeasure_Conference_desc:0 ""
  mobilization_order:0 "예비군 추가동원"
+ mobilization_order_desc:0 ""
  Independent_Army_Corps:0 "독립군 장교단의 귀국"
+ Independent_Army_Corps_desc:0 ""
  emergency_measure:0 "비상대책법"
+ emergency_measure_desc:0 ""
  indiscriminate_bombing_approval:0 "무차별 폭격?"
+ indiscriminate_bombing_approval_desc:0 ""
  Offensive:0 "대공세"
+ Offensive_desc:0 ""
  information_warfare:0 "정보전 돌입"
+ information_warfare_desc:0 ""
  mkr_victory_in_the_civil_war:0 "내전에서의 승리"
+ mkr_victory_in_the_civil_war_desc:0 ""
  
  sub_mod_kasche:0 "`아나키 서브모드`§H가 필요합니다.§!"
 
 
  ROK_security_law:0 "긴급 보안법"
+ ROK_security_law_desc:0 ""
  ROK_national_support:0 "국민지지확보"
+ ROK_national_support_desc:0 ""
  ROK_independence_fighters:0 "독립운동가들의 귀국"
+ ROK_independence_fighters_desc:0 ""
  ROK_mobilization_order:0 "예비군 동원령"
+ ROK_mobilization_order_desc:0 ""
  ROK_Independent_Army_Officers:0 "독립군 장교단"
+ ROK_Independent_Army_Officers_desc:0 ""
  ROK_supply_of_goods:0 "물자보급"
+ ROK_supply_of_goods_desc:0 ""
  ROK_victory_of_the_people:0 "국민의 승리"
+ ROK_victory_of_the_people_desc:0 ""
  ROK_Attack_Instructions:0 "공격지침 하달"
+ ROK_Attack_Instructions_desc:0 ""
  
  ROK_offencive:0 "필사의 각오"
+ ROK_offencive_desc:0 ""
  
  rok_focus:0 "대한민국 민주정부 국가중점"
  
