설명 넣어줄 사람 급구##

--- a/localisation/replace/mkr_focus_l_english.yml
+++ b/localisation/replace/mkr_focus_l_english.yml
@@ -165,3 +165,171 @@
  Pohang-class_improvement:0 "포항급 개량"
  Transportation_Helicopter_Improvement:0 "수송헬기 개량"
  Attack_Helicopter_Production_Concentration:0 "공격헬기 생산집중"
+
+ #중점 설명 넣어줘라
+ 
+ MKR_The_Future_of_Korea_desc:0 "대한민국의 미래"
+ MKR_economic_crisis_desc:0 "경제위기"
+ MKR_recovery_from_civil_war_desc:0 "내전에서의 회복"
+ MKR_strengthening_order_desc:0 "질서강화"
+ MKR_a_curfew_order_desc:0 "통금령실시"
+ MKR_Press_censorship_policy_desc:0 "언론검열정책"
+ MKR_suppression_of_civil_movements_desc:0 "시민운동 탄압"
+ MKR_the_closure_of_the_NA_desc:0 "국회 폐쇄"
+ 
+ MKR_implementation_of_appeasement_policy_desc:0 "유화책실시"
+ MKR_Popular_desc:0 "인기있는 얼굴마담"
+ MKR_NCUI_desc:0 "통일주체국민회의"
+ MKR_DCS_desc:0 "국군기무사령부"
+ MKR_contact_with_North_Korea_desc:0 "북한과 접촉하다"
+ MKR_East_Sea_show_of_force_desc:0 "동해 무력시위"
+ MKR_East_Asia_Tension_Stiff_desc:0 "동아시아 긴장고조"
+ MKR_Military_Reorganization_desc:0 "군대 재정비"
+ 
+ MKR_Stand_with_US_desc:0 "미국과 함께 가자"
+ MKR_contact_allies_desc:0 "연합국에 접촉하다"
+ MKR_Stand_with_UK_desc:0 "석유 확보전쟁"
+ MKR_Advance_to_Europe_desc:0 "장비와 식민지의 대체"
+ MKR_PDU_desc:0 "태평양 방위연합"
+ MKR_contact_with_the_Philippines_desc:0 "호주와 동맹"
+ MKR_anti_Communism_desc:0 "북진멸공"
+ MKR_hard_liine_desc:0 "도발에 강경대응"
+ MKR_Warning_to_North_Korea_desc:0 "북한에게 경고"
+ MKR_Reinforcement_of_38_Line_Expense_desc:0 "38선 경비 강화"
+ MKR_naval_mobilization_desc:0 "해군 동원"
+ MKR_new_radar_station_desc:0 "레이더 신설"
+ MKR_West_Front_Artillery_Incident_desc:0 "서부전선 포격사건"
+ MKR_preventive_war_desc:0 "예방전쟁"
+ MKR_non_aggression_treaty_with_Japan_desc:0 "일본과의 불가침조약"
+ MKR_facing_north_desc:0 "북진 지속"
+ MKR_libertarians_desc:0 "자유주의자들 문제"
+ MKR_support_chang_desc:0 "장제스지원"
+ MKR_Reserve_Force_Mobilization_desc:0 "제2의 전선"
+ MKR_liberal_demand_acceptance_desc:0 "진보주의자 요구 수용"
+ MKR_Allow_Civil_Movement_desc:0 "시민운동 허용"
+ MKR_Allow_limited_freedom_desc:0 "제한적 자유 허용"
+ MKR_mitigation_of_press_censorship_desc:0 "언론검열완화"
+ MKR_a_war_against_crime_desc:0 "범죄와의 전쟁"
+ MKR_the_lifting_of_the_university_closure_order_desc:0 "대학 휴교령 해제"
+ MKR_new_facism_desc:0 "신 제국주의"
+ MKR_the_appointment_of_General_Lee_desc:0 "이범석장군을 추대"
+ MKR_cant_trust_commies_desc:0 "빨갱이는 믿을수없다"
+ MKR_Stronger_Korea_desc:0 "헌법제5조 폐기"
+ MKR_Manchurian_pressure_desc:0 "만주국 압박"
+ MKR_military_exercises_desc:0 "군사훈련"
+ MKR_provoke_Japan_desc:0 "일본을 도발하다"
+ MKR_War_of_Securing_Colony_desc:0 "식민지 확보전쟁"
+ MKR_Securing_SA_desc:0 "동남아시아 확보"
+ MKR_Civil_engineering_work_progress_desc:0 "대형 토목공사진행"
+ MKR_West_Coast_Highway_desc:0 "서해안 고속도로"
+ MKR_revenge_of_1910_desc:0 "1910년의 복수"
+ MKR_Oceania_Front_desc:0 "오세아니아 전선"
+ MKR_across_the_Pacific_desc:0 "태평양을 건너"
+ MKR_additional_power_plant_construction_desc:0 "추가적인 발전소 건설"
+ MKR_Honam_Expressway_desc:0 "호남 고속도로"
+ MKR_Broken_Industrial_Recovery_desc:0 "부서진 산업 복구"
+ MKR_nationalization_of_enterprises_desc:0 "파산위기 기업 국유화"
+ MKR_securing_national_finance_desc:0 "국가재정 확보"
+ MKR_tax_increase_desc:0 "세금인상"
+ MKR_Reorganization_of_Regional_Infrastructure_desc:0 "강철합금공장 확장"
+ MKR_investment_in_private_industry_desc:0 "민간산업에 투자"
+ MKR_Sixth_Economic_Development_Plan_desc:0 "6차 경제개발 5개년 계획"
+ MKR_New_Saemaul_Movement_desc:0 "신 새마을운동"
+ MKR_new_industrial_complex_desc:0 "공업단지 신설"
+ MKR_Reinforcement_of_Seoul_Infrastructure_desc:0 "포항 제철소 강화"
+ MKR_marine_industry_desc:0 "해운국"
+ MKR_Activating_the_defense_contractor_desc:0 "방산업체 활성화"
+ MKR_heavy_industry_heavy_chemical_complex_desc:0 "중공업,중화학단지"
+ MKR_additional_shipyard_desc:0 "추가적인 조선소"
+ MKR_Miracle_on_the_Han_River_desc:0 "한강의 기적"
+ MKR_clearance_for_export_of_trade_goods_desc:0 "무역품 수출허가"
+ MKR_NIS_desc:0 "대한민국 국가정보원"
+ MKR_police_buildup_desc:0 "경찰력 증강"
+ MKR_Emergency_Mobilization_Ordinance_desc:0 "긴급동원령"
+ MKR_Kill_mao_desc:0 "마오 제거"
+ MKR_time_of_glory_desc:0 "영광의 시간"
+ MKR_contact_to_the_US_desc:0 "미국에 접촉"
+ MKR_support_the_US_desc:0 "미합중국을 지원하다"
+ MKR_the_old_enemy_desc:0 "오랜적군 타도"
+ MKR_Diplomacy_with_France_desc:0 "연합국 가입"
+ MKR_the_defeat_of_fascism_desc:0 "붉은 위협"
+ MKR_colonies_of_the_great_powers_desc:0 "열강의 식민지들"
+ MKR_Toward_the_Indian_Ocean_desc:0 "천년의 적"
+ MKR_Allied_Technical_Sharing_desc:0 "연합국 기술공유"
+ MKR_Allied_accession_desc:0 "파시즘 타도"
+ MKR_absolute_impossibility_desc:0 "절대불허"
+ 
+ 
+ ROKND_1_desc:0 "대한민국 국방부"
+ ROKA_desc:0 "대한민국 육군"
+ Army_Modernization_Concentration_desc:0 "육군현대화 집중"
+ Army_Air_Corps_desc:0 "육군 항공대"
+ Attack_Helicopter_Improvement_desc:0 "공격헬기 개량"
+ mechanized_infantry_desc:0 "기계화보병"
+ K1A1_desc:0 "K1A1"
+ SPAA_BIHO_desc:0 "자주대공포 '비호'"
+ KAFV_project_desc:0 "KAFV 프로젝트"
+ Defense_Division_desc:0 "방위사단"
+ K2_Modified_Type_desc:0 "K2 개량형"
+ K263_Modified_Type_desc:0 "K263 개량형"
+ new_type_gun_desc:0 "신형 야포"
+ Additional_Local_Division_desc:0 "추가 향토사단"
+ mot_Infantry_Focus_desc:0 "차량화 집중"
+ use_of_decoration_materials_desc:0 "치장물자 사용"
+ Infantry_Equipment_Plan_desc:0 "보병장비 계획"
+ Support_Firearms_Main_desc:0 "지원화기 주력"
+ field_artillery_project_desc:0 "야포 프로젝트"
+ Armored_Vehicle_Development_desc:0 "장갑차 개발"
+ Panzer_Division_desc:0 "기갑사단"
+ heavy_tank_plan_desc:0 "중전차 계획"
+ M4_Sherman_desc:0 "M4셔먼"
+ new_infantry_equipment_desc:0 "새로운 보병장비"
+ ROKNAVY_desc:0 "대한민국 해군"
+ Naval_Ship_Modernization_desc:0 "해군함정 현대화"
+ Additional_Chamsuri_class_desc:0 "추가적인 참수리급"
+ Ulsan_class_additional_drying_desc:0 "울산급 추가건조"
+ radar_improvement_desc:0 "해군 레이더 개량"
+ Modern_Fire_Control_Unit_desc:0 "현대식 사격통제장치"
+ a_new_model_gun_desc:0 "신형 함포"
+ new_type_destroyer_desc:0 "신형 구축함"
+ Gwanggaeto_the_great_class_desc:0 "광개토대왕급 구축함"
+ engine_improvement_desc:0 "해군 엔진 개량"
+ Chang_Bogo_class_submarine_desc:0 "장보고급 잠수함"
+ Use_of_spherical_traps_desc:0 "구형 함정 사용"
+ Contact_with_foreign_shipbuilding_companies_desc:0 "외국 조선회사와 접촉"
+ cruiser_project_desc:0 "순양함 프로젝트"
+ destroyer_planning_desc:0 "구축함 계획"
+ submarine_planning_desc:0 "잠수함 계획"
+ Aircraft_Carrier_Preferentialism_desc:0 "항공모함 우선주의"
+ Naval_Air_Force_desc:0 "해군항공대"
+ STS_Fighter_desc:0 "함상전투기"
+ Auxiliary_Ship_Concentration_desc:0 "보조함 집중"
+ STS_Aircraft_desc:0 "함상공격기"
+ Resurrection_of_the_battleship_project_desc:0 "거함거포주의 부활"
+ Launching_BattleShip_Development_desc:0 "전함 개발에착수"
+ heavy_cruiser_project_desc:0 "중순양함 계획"
+ Main_ship_concentration_desc:0 "주력함집중"
+ The_sea_is_ours_desc:0 "바다는 우리의 것이다"
+ ROKAF_desc:0 "대한민국 공군"
+ modern_aircraft_desc:0 "현대 항공기"
+ Improved_F5_desc:0 "F-5 제공호 개량"
+ Improved_Air_Force_Radar_desc:0 "개선된 공군 레이더"
+ Additional_Air_Force_Base_desc:0 "추가적인 공군기지"
+ AAM_120_AMRAAM_desc:0 "AAM-120 암람"
+
+ fighter_engine_improvement_desc:0 "전투기 엔진 개량"
+ KF_16C_desc:0 "KF-16C"
+ F-4_desc:0 "팬텀 전투폭격기"
+ fighter_desc:0 "프롭기"
+ cas_desc:0 "근접항공지원기 개발"
+ detonator_desc:0 "뇌격기 프로젝트"
+ Medium_bomber_desc:0 "중형폭격기 개발"
+ a_strategic_bomber_desc:0 "전략폭격기"
+ heavy_fighter_development_desc:0 "중전투기 계획"
+ jet_project_desc:0 "제트기 프로젝트"
+ new_SP_desc:0 "신형 자주포"
+ Armored_Combat_Team_desc:0 "기갑 전투단"
+ AGM-84_desc:0 "AGM-84 '하푼'"
+ Pohang-class_improvement_desc:0 "포항급 개량"
+ Transportation_Helicopter_Improvement_desc:0 "수송헬기 개량"
+ Attack_Helicopter_Production_Concentration_desc:0 "공격헬기 생산집중"
