--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -166,21 +166,178 @@
  ROK_koreas_new_eqp:0 "공군교리 개편"
  ROK_the_miracle_of_han_river:0 "한강의 기적"
  bear_business:0 "불곰사업"
-
- ROK_security_law:0 "긴급 보안법"
- ROK_national_support:0 "국민지지확보"
- ROK_independence_fighters:0 "독립운동가들의 귀국"
- ROK_mobilization_order:0 "예비군 동원령"
- ROK_Independent_Army_Officers:0 "독립군 장교단"
- ROK_supply_of_goods:0 "물자보급"
- ROK_victory_of_the_people:0 "국민의 승리"
- ROK_Attack_Instructions:0 "공격지침 하달"
- 
- ROK_offencive:0 "필사의 각오"
- 
- rok_focus:0 "대한민국 민주정부 국가중점"
  
  91_annex_mkr:0 "[MKR.GetName]에게서 승리를 거둠"
  91_control_mkr:0 "[MKR.GetName]에게서 승리를 거둠"
  91_annex_prk:0 "[PRK.GetName]에게서 승리를 거둠"
  91_annex_mkr_and_prk:0 "[PRK.GetName]과 [MKR.GetName]에게서 승리를 거둠"
+ 
+ #중점 설명
+ 
+ presidential_election_desc:0 "14대 대선"
+ economis_cris_desc:0 "경제위기"
+ President_Kim_Koo_desc:0 "김구 대통령"
+ new_national_security_law_desc:0 "새 국가보안법"
+ welfare_policy_desc:0 "복지정책 도입"
+ contact_with_NK_desc:0 "노조와 협상"
+ libration_desc:0 "자유국가"
+ President_Kim_Young_sam_desc:0 "김영삼 대통령"
+ enactment_of_law_desc:0 "국가안전기획부 약화"
+ freedom_equality_desc:0 "자유,평등"
+ Central_Office_Demolition_desc:0 "조선총독부 철거"
+ test_Japan_desc:0 "일본을 시험하다"
+ Contact_with_China_desc:0 "중국에 접촉"
+ intervention_in_the_civil_war_desc:0 "국공내전 개입"
+ war_of_liberation_desc:0 "자위대와 협상"
+ an_ultimatum_to_Japan_desc:0 "일본에 최후통첩"
+ elimination_of_censorship_desc:0 "검열 철폐"
+ test_China_desc:0 "중국을 시험하다"
+ demand_from_jang_desc:0 "장제스에게 요구하다"
+ theorem_of_warlords_desc:0 "군벌을 정리하다"
+ old_enemy_desc:0 "오랜 적군"
+ East_Asian_Union_desc:0 "동아시아 연합"
+ Punishment_of_those_involved_desc:0 "하나회 관련자 처벌"
+ history_correctly_desc:0 "역사 바로알기 정책"
+ real_name_financial_desc:0 "금융실명제"
+ investment_in_education_desc:0 "교육에 투자"
+ Allied_accession_desc:0 "연합국 가입"
+ ask_for_a_loan_desc:0 "차관을 요청하다"
+ gold_collecting_movement_desc:0 "금모으기운동"
+ approval_of_corporate_subsidies_desc:0 "긴급 기업보조금 승인"
+ unemployment_welfare_policy_desc:0 "실업자 복지정책"
+ emergency_bank_subsidy_desc:0 "은행 붕괴방지"
+ price_stabilization_desc:0 "물가 안정화"
+ economic_stabilization_desc:0 "경제 안정화"
+ six_five_year_flan_desc:0 "6차 경제개발5개년 계획"
+ expansion_of_social_development_desc:0 "사회 개발 확대"
+ regional_development_desc:0 "지역개발"
+ establishment_of_market_economy_desc:0 "시장경제 질서 확립"
+ Infrastructure_Development_desc:0 "인프라개발"
+ Industrial_Complex_Expansion_desc:0 "공단확장"
+ Industrial_Complex_Development_desc:0 "산업단지 개발"
+ Establishing_a_debt_repayment_plan_desc:0 "부채상환계획수립"
+ fair_competition_desc:0 "공정한 경쟁"
+ KAIST_desc:0 "KAIST"
+ defence_industry_desc:0 "방위사업"
+ check_of_large_enterprises_desc:0 "재벌 강화"
+ liquidation_of_insolvent_enterprises_desc:0 "부실기업 정리"
+ small_business_policy_desc:0 "재벌에 도전"
+ economic_opening_desc:0 "경제개방 활성화"
+ No_export_allowed_desc:0 "수출 불허"
+ meet_chang_desc:0 "장제스를 만나다"
+ Peace_in_EA_desc:0 "동아시아의 평화"
+ bury_sb_in_a_warlord_desc:0 "군벌에 묻다"
+ Asian_nationalism_desc:0 "아시아 민족주의"
+ deal_with_UK_desc:0 "영국과의 거래"
+ deal_with_US_desc:0 "미국과의 거래"
+ Invitation_to_Australia_desc:0 "호주 초대"
+ Invitation_to_the_Philippines_desc:0 "필리핀 초대"
+ Malay_Invitation_desc:0 "말레이 초대"
+ siam_press_desc:0 "시암 압박"
+ Liberation_of_Indonesia_desc:0 "인도네시아의 해방"
+ Invitation_to_India_desc:0 "인도 초대"
+ Invitation_to_New_Zealand_desc:0 "뉴질랜드 초대"
+ the_fall_of_imperialism_desc:0 "제국주의의 몰락"
+ ROK_defence_export_desc:0 "국내산업 지원"
+ ROK_forigin_inpra_desc:0 "외국 기업 인수합병"
+ ROK_panho_desc:0 "내수시장 장려"
+ ROK_germans_attack_desc:0 "독일의 위협 홍보"
+ ROK_auschibitz_desc:0 "절멸계획 알리기"
+ ROK_national_attack_desc:0 "전체주의 분쇄작전"
+ ROK_military_reform_desc:0 "하나회 잔당 소거"
+ ROK_korean_tech_none-law_desc:0 "미래기술보호법"
+ ROK_build_the_wall_desc:0 "제한적 수입 허용"
+ ROK_make_korea_great_again_desc:0 "한국을 다시 위대하게!"
+ ROK_tex_boom_desc:0 "관세 폭탄"
+ ROK_good_japan_is_dead_japan_desc:0 "일본의 만행 알리기"
+ ROK_east_sea_desc:0 "지도 개편"
+ ROK_lian_dai_desc:0 "국민 단결"
+ ROK_army_reform_desc:0 "육군 재편성"
+ ROK_equipment_reuse_desc:0 "장비 양산화"
+ ROK_gospel_reform_desc:0 "보병 장비 개선"
+ ROK_the_plan_of_tiger_desc:0 "육군사관학교 개혁"
+ 
+ ROK_new_tank_desc:0 "기갑장비 주력"
+ ROK_k1a1_prototype_desc:0 "K1A1 시제품"
+ ROK_K9_desc:0 "K-9 '썬더'"
+ ROK_biho_desc:0 "자주대공포 '비호'"
+ ROK_wargame_desc:0 "워게임 실시"
+ ROK_Joint_Chiefs_of_Staff_desc:0 "합동참모본부 개편"
+ ROK_doctrine_annex_desc:0 "교리 통합"
+ ROK_panzer_vor_desc:0 "전차! 앞으로!"
+ ROK_arty_focus_desc:0 "화력지원이 필요하십니까?"
+ ROK_Perfect_plan_desc:0 "'완벽한'계획"
+ ROK_deep_battle_desc:0 "대규모 종심작전"
+ ROK_suppoet_eq_mob_desc:0 "지원화기 개량"
+ ROK_apc_mob_desc:0 "APC 개량"
+ ROK_ifv_mob_desc:0 "IFV 주력"
+ ROK_Military_culture_desc:0 "병영문화 개선"
+ 
+ ROK_Cheonan_desc:0 "천안함의 교훈"
+ ROK_new_mis_desc:0 "신형 대함미사일"
+ ROK_radar_mod_desc:0 "해군 레이더 개선"
+ ROK_new_127_gun_desc:0 "신형 127mm 함포 "
+ ROK_aa_mis_desc:0 "대공미사일 중점"
+ ROK_ciws_desc:0 "CIWS"
+ ROK_Gwanggaeto_the_great_desc:0 "광개토대왕급"
+ ROK_jangbogo_class_desc:0 "장보고급 잠수함"
+ ROK_jsdf_desc:0 "자위대와의 협력"
+ ROK_kongo_class_desc:0 "공고급 구축함"
+ ROK_asagiri_class_desc:0 "아사기리급 구축함"
+ ROK_new_dockyard_desc:0 "새로운 해군예산 할당"
+ ROK_new_navy_doctline_desc:0 "작전교리 재구성"
+ ROK_carrier_focus_desc:0 "항공모함 우선주의"
+ ROK_destroyer_focus_desc:0 "전투함대 우월성"
+ ROK_carrier_jet_desc:0 "함재기 개발계획"
+ ROK_kim_carrier_desc:0 "김영삼급 항공모함"
+ ROK_doctrine_focus_1_desc:0 "교리 재구성"
+ ROK_new_pcc_desc:0 "추가적인 호위함들"
+ 
+ 
+ ROK_wargame_desc:0 "워게임 실시"
+ ROK_Joint_Chiefs_of_Staff_desc:0 "합동참모본부 개편"
+ ROK_doctrine_annex_desc:0 "교리 통합"
+ ROK_panzer_vor_desc:0 "전차! 앞으로!"
+ ROK_arty_focus_desc:0 "화력지원이 필요하십니까?"
+ ROK_Perfect_plan_desc:0 "'완벽한'계획"
+ ROK_deep_battle_desc:0 "대규모 종심작전"
+ ROK_suppoet_eq_mob_desc:0 "지원화기 개량"
+ ROK_apc_mob_desc:0 "APC 개량"
+ ROK_ifv_mob_desc:0 "IFV 주력"
+ ROK_Military_culture_desc:0 "병영문화 개선"
+ 
+ 
+ ROK_with_usa_desc:0 "미국을 초청하다"
+ ROK_hawwai_defence_desc:0 "주한미군 문제"
+ ROK_plan_green_desc:0 "작전명 초록"
+ ROK_plan_black_desc:0 "작전명 검정"
+ ROK_new_general_desc:0 "국방개혁"
+ ROK_independence_army_desc:0 "새로운 장교들"
+ ROK_co-aisan_allied_desc:0 "동아시아 경제 파트너쉽"
+ ROK_eastern_nope_desc:0 "차별 금지법 제정"
+ ROK_the_union_of_pan-asia_desc:0 "대 아시아 연방"
+ ROK_democracy_is_best_desc:0 "자유와 민주주의 알리기"
+ ROK_east_south_asian_nationalism_desc:0 "동남아 민족주의를 아시아 연방으로"
+ ROK_koreas_United_nation_desc:0 "한국이 주도하는 UN"
+ ROK_pan_earth_union_desc:0 "지구연방 수립"
+ ROK_south_american_fascism_attack_desc:0 "소비에트연방 침공"
+ ROK_protect_spain_democracy_desc:0 "에스파냐를 압박"
+ ROK_earth_libertys_defencer_desc:0 "지구 자유의 수호자"
+ ROK_bokji_of_20th_end_desc:0 "20세기 후반의 인권보장"
+ ROK_happy_korea_desc:0 "살기좋은 우리나라로 이민오세요"
+ ROK_many_culture_desc:0 "다문화 가정인식 개편"
+ ROK_the_taepyung_indo_plan_desc:0 "범 태평양-인도양 패권 확보"
+ ROK_social_many_desc:0 "사회적 다양성"
+ ROK_the_father_of_rok_army_desc:0 "병역비리 조사"
+ ROK_navy_reform_desc:0 "해군 개혁"
+ ROK_airforce_plan_desc:0 "하늘은 우리의 것이다"
+ ROK_airforce_reform_desc:0 "공군 개혁"
+ ROK_myth_of_navy_desc:0 "해군의 신화 재건"
+ ROK_plan_indo-taepyungyang_desc:0 "제주 해군기지"
+ ROK_high_skys_korean_desc:0 "제공기 개량계획"
+ ROK_air_gospel_desc:0 "공군기 개량계획"
+ ROK_new_air_general_desc:0 "새로운 공군 장교"
+ ROK_f15_pilot_desc:0 "현대식 파일럿"
+ ROK_koreas_new_eqp_desc:0 "공군교리 개편"
+ ROK_the_miracle_of_han_river_desc:0 "한강의 기적"
+ bear_business_desc:0 "불곰사업"
