--- a/localisation/replace/kor_focus_l_english.yml
+++ b/localisation/replace/kor_focus_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  # Focus Name
  KOR_world_1936:0 "1936년의 세계"
- KOR_world_1936_desc:0 "1991년의 말, 우리는 재야의 종 소리를 들으며 기분좋은 신년을 기념하기 위하여 들떠있었습니다. 그러나 1월 1일 12시 00분이 된 그때, 어떤 위화감이 지나갔습니다. 모든 연락망과 전파가 두절되었으며 무선통신망이 완전히 망가졌습니다. 도대체, 이게 무슨 일인지.."
+ KOR_world_1936_desc:0 "1991년의 말, 우리는 재야의 종 소리를 들으며 기분좋은 신년을 기념하기 위하여 들떠있었습니다.그러나 1월 1일 12시 00분이 된 그때, 전국이 하얀 빛에 뒤덮혔습니다. 정부는 북한의 공격을 판단하며 국가안전보장회의를 소집했습니다."
  KOR_intel:0 "정보 수집"
  KOR_intel_desc:0 "믿기 어려운 이야기지만, 일본제국의 함선이 돌아다니는 것과 모든 무선통신망이 두절된 것. 인공위성이 작동되지 않는 것을 보아하니 어떤 '특수한' 힘이 한반도에 작용한 것 같습니다. \n더욱 자세한 정보를 알기 위하여 모든 자산들을 총동원해야 할 것입니다."
  KOR_martial_law:0 "비상계엄령 선포"
