--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -68,6 +68,24 @@
  korea.21.d:0 "우리가 하나회 숙청에 밍기적대는동안,하나회에서 먼저 선수를쳤습니다!! 보안사령관'서완수'중장과 육군참모총장'김진영'을 필두로한 반란군세력들이 또다시 무기를 들었습니다. 내전의 상처를 미처 치유하지도 못한채,우리는 또다시 반란군세력을 상대하여야 합니다....."
  korea.21.a:0 "이나라가 어떻게 되려나."
  
+ korea.30.t:0 "북한이 접촉해오다"
+ korea.30.d:0 "최근 일어난 일련의 사태 이후, 북한에서는 김씨일가가 완전히 숙청된 다음, 사민주의의 거두라고 불리우던 여운형이 지도자가 되었습니다. 저들은 기존에 고수해오던 고립정책을 깨고, 현 남북관계에 새로운 바람이 불어오길 바라는 것 같습니다."
+ korea.30.a:0 "좋은 바람이군."
+ 
+ korea.31.t:0 "여운형의 방한의사 타진"
+ korea.31.d:0 "북한의 지도자인 여운형이, 직접 지금까지의 적대행위를 딛고 더 나은 한반도를 위하여 직접 방한하겠다는 의사를 표하였습니다."
+ korea.31.a:0 "여운형.."
+ 
+ korea.32.t:0 "휴전선 철거 요청"
+ korea.32.d:0 "양측의 피의 대립을 씻고, 서로간의 모든 오해를 풀기 위해 휴전선에서 함께 철수하자고 @PRK북한의 여운형이 제안하였습니다."
+ korea.32.a:0 "동의하지."
+ 
+ korea.33.t:0 "고려 연방 제안"
+ korea.33.d:0 ""
+ korea.33.a:0 "동의하지."
+ korea.33.b:0 "대한민국은 절대 굴복하지 않는다!"
+ korea.33.c:0 "아직은 두 정부를 유지하자.."
+ 
  korea.100.t:0 "내전에 돌입"
  korea.100.d:0 "한반도에서 내전이 시작되었습니다."
  korea.100.a:0 "자, 싸우자."
@@ -574,6 +592,12 @@
  kor_news.31.b:0 "우리는 패배하였다."
  kor_news.31.c:0 "승리다!"
  
+ kor_news.33.t:0 "새로운 길을 걸어가는 한반도"
+ kor_news.33.d:0 ""
+ kor_news.33.a:0 "좋은 시대로군."
+ kor_news.33.b:0 "여운형 동지 만세!"
+ kor_news.33.c:0 "여운형이라.."
+ 
  ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
  PRK.13.d:0 "김일성 광장에서 열병식이 한창 진행 중이던 시각, 계획대로 행렬 속에서 주행 중이던 전차 한 량이 국방위원장 일동을 향해 발포했습니다. 단 한 발의 포성으로 광장은 순식간에 아수라장이 됐지만 얼마 지나지 않아 우리 소속의 장교들에 의해 상황은 통제 하에 들어갔습니다. 그러나 현재 김정일 국방위원장의 상태는 묘연합니다. 유일하게 우리가 확신할 수 있는 것은 그가 성한 몸으로 살아남았더라도 우리의 거사를 막을 방도가 없을 것이라는 점입니다.."
@@ -596,7 +620,7 @@
  PRK.11.a:0 ""
  
  PRK.12.t:0 "정통사회주의파의 움직임"
- PRK.12.d:0 "김일성이 통치하는 현재의 조선은 썩어 문들어졌습니다. 사회주의를 버린 조선은 점점 피폐해져가고있으며 주체사상이라는 수정주의적인 이념을 통치이념으로 내새우고있습니다. 우리는 정통 마르크스-레닌주의를 받아들여 조선을 개혁해야합니다.\n\n§G쿠데타를위한 준비과정을 해금합니다.§! §R너무 질질끌고 거사를 머뭇거리면 김정일이 눈치를챌것입니다!!§!"
+ PRK.12.d:0 "김일성이 통치하는 현재의 조선은 썩어 문들어졌습니다. 사회주의를 버린 조선은 점점 피폐해져가고있으며 주체사상이라는 수정주의적인 이념을 통치이념으로 내새우고있습니다. 우리는 정통 마르크스-레닌주의를 받아들여 조선을 개혁해야합니다.\n\n§G쿠데타를 위한 준비과정을 해금합니다.§! §R너무 질질끌고 거사를 머뭇거리면 김정일이 눈치를 챌 것입니다!!§!"
  PRK.12.a:0 "알겠음."
  
  PRK.14.t:0 "중대회의"
@@ -816,3 +840,14 @@
  NIS_Weakening:0 "안기부의 권한이 축소됨"
  removal_of_censorship:0 "검열이 철폐됨"
  military_reform:0 "하나회 관련자를 처벌함"
+ martial_law:0 "언론에 보도지침을 하달하다"
+ food_cris_end:0 "§Y식량난 위기§!가 끝나다"
+ 
+ enemy_china:0 "[TAG.GetName]을 적대하다"
+ End_of_the_power:0 "§G군 내부의 불만이 정리됩니다.§!"
+ 
+ Remove_the_line:0 "@PRK조선의 §Y휴전선§!이 철거될 것입니다."
+ Remove_the_line_KOR:0 "@KOR한국의 §Y휴전선§!이 철거될 것입니다."
+ IF_LINE_ACCEPTE:0 "@KOR한국의 §Y휴전선§!이 철거될 것입니다."
+ 
+ PRK_south:0 "우호적 행위"
