--- a/localisation/replace/korea_mod_traits_l_english.yml
+++ b/localisation/replace/korea_mod_traits_l_english.yml
@@ -58,3 +58,8 @@
  KOR_army_3:0 "광복군 부사령관"
  
  KOR_war_god:0 "전쟁의 신"
+ 
+ trait_PRK_kim_yong_nam:0 "최고인민회의 위원장"
+ trait_PRK_choe_yung_lim:0 "국가계획위원장"
+ trait_PRK_yeo_un_hyeong:0 "사민주의 거두"
+ trait_PRK_kim_doo_bong:0 "공화국 초대 원수"
