--- a/localisation/replace/kor_countries_l_english.yml
+++ b/localisation/replace/kor_countries_l_english.yml
@@ -23,6 +23,42 @@
  KOR_eok_ADJ:0 "한국"
  KOR_eok:0 "한국"
  
+ PRK_GORYEO_fascism:0 "대고려국"
+ PRK_GORYEO_fascism_DEF:0 "대고려국"
+ PRK_GORYEO_democratic:0 "고려연방"
+ PRK_GORYEO_democratic_DEF:0 "고려연방"
+ PRK_GORYEO_neutrality:0 "고려"
+ PRK_GORYEO_neutrality_DEF:0 "고려"
+ PRK_GORYEO_communism:0 "고려연방"
+ PRK_GORYEO_communism_DEF:0 "고려연방"
+ PRK_GORYEO_DEF:0 "고려"
+ PRK_GORYEO_ADJ:0 "고려"
+ PRK_GORYEO:0 "고려"
+ 
+ PRK_GORYEO_NORTH_fascism:0 "대고려국"
+ PRK_GORYEO_NORTH_fascism_DEF:0 "대고려국"
+ PRK_GORYEO_NORTH_democratic:0 "고려연방국"
+ PRK_GORYEO_NORTH_democratic_DEF:0 "고려연방국"
+ PRK_GORYEO_NORTH_neutrality:0 "고려"
+ PRK_GORYEO_NORTH_neutrality_DEF:0 "고려"
+ PRK_GORYEO_NORTH_communism:0 "고려연방국"
+ PRK_GORYEO_NORTH_communism_DEF:0 "고려연방국"
+ PRK_GORYEO_NORTH_DEF:0 "고려"
+ PRK_GORYEO_NORTH_ADJ:0 "고려"
+ PRK_GORYEO_NORTH:0 "고려"
+ 
+ KOR_GORYEO_SOUTH_fascism:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_fascism_DEF:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_democratic:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_democratic_DEF:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_neutrality:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_neutrality_DEF:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_communism:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_communism_DEF:0 "남부 고려 정부"
+ KOR_GORYEO_SOUTH_DEF:0 "고려"
+ KOR_GORYEO_SOUTH_ADJ:0 "고려"
+ KOR_GORYEO_SOUTH:0 "고려"
+ 
  KOR_2009_scenario_fascism:0 "대한민국"
  KOR_2009_scenario_fascism_DEF:0 "대한민국"
  KOR_2009_scenario_democratic:0 "대한민국"
