--- a/localisation/replace/kor_focus_l_english.yml
+++ b/localisation/replace/kor_focus_l_english.yml
@@ -1,38 +1,37 @@
 ﻿l_english:
  # Focus Name
  KOR_world_1936:0 "1936년의 세계"
- KOR_world_1936_desc:0 "1991년의 말, 우리는 재야의 종 소리를 들으며 기분좋은 신년을 기념하기 위하여 들떠있었습니다.그러나 1월 1일 12시 00분이 된 그때, 전국이 하얀 빛에 뒤덮혔습니다. 정부는 북한의 공격을 판단하며 국가안전보장회의를 소집했습니다."
+ KOR_world_1936_desc:0 "1991년의 말, 우리는 재야의 종 소리를 들으며 기분 좋은 신년을 기념하기 위하여 들떠있었습니다.그러나 1월 1일 12시 00분이 된 그때, 전국이 하얀 빛에 뒤덮혔습니다. 정부는 북한의 공격을 판단하며 국가안전보장회의를 소집했습니다."
  KOR_intel:0 "정보 수집"
- KOR_intel_desc:0 "믿기 어려운 이야기지만, 일본제국의 함선이 돌아다니는 것과 모든 무선통신망이 두절된 것. 인공위성이 작동되지 않는 것을 보아하니 어떤 '특수한' 힘이 한반도에 작용한 것 같습니다. \n더욱 자세한 정보를 알기 위하여 모든 자산들을 총동원해야 할 것입니다."
- KOR_martial_law:0 "비상계엄령 선포"
- KOR_martial_law_desc:0 ""
- KOR_NA_Occupation:0 "국회점거"
+ KOR_intel_desc:0 "어떻게 왔는지는 몰라도 아무래도 우리는 “1936년”으로 온 것 같습니다. 일본제국 함대가 동해상에서 발견됬다는 사실이 민간에 퍼지자 충격과 공포에 빠지기 시작했습니다. 일단 국내 상황을 신속히 파악하고 진정 시킬 필요가 있습니다."
+ KOR_martial_law:0 "비상 계엄령 선포"
+ KOR_martial_law_desc:0 "국가 긴급 사태이니 만큼 정부는 헌법 제 77조에 따라 전국에 비상 계엄령을 선포하기로 정했습니다. 일부 국무의원들이 과격 분자들이 들고 일어날것이라고 경고하지만 어쩔 수 없습니다. 국가를 지키기 위해선 조금의 희생이 필요한 법입니다. "
+ KOR_NA_Occupation:0 "국회 점거"
  KOR_NA_Occupation_desc:0 ""
  KOR_press_control:0 "언론 통제"
- KOR_press_control_desc:0 ""
+ KOR_press_control_desc:0 "바보 같은 언론이 성급하게 기사들을 써재끼는 바람에 국가가 대 혼돈에 빠졌습니다. 늦었지만 지금이라도 언론에 지침을 하달해 여론을 통합시키고 진정시켜야만 합니다. "
  KOR_airport_closure:0 "공항,항구폐쇄"
- KOR_airport_closure_desc:0 ""
+ KOR_airport_closure_desc:0 "우선 이러한 비상사태에 외국으로 도망치려는 국민들을 막을 필요가 있습니다. 함부로 나갔다가 일본 제국군과 마주칠지 모르는 일 아니겠습니까? 이게 다 국민들을 위한 조치입니다."
  KOR_USFK_issue:0 "주한미군문제"
- KOR_USFK_issue_desc:0 ""
+ KOR_USFK_issue_desc:0 "우리는 민간을 천천히 통제해가는 중입니다. 그런데 국내에 우리가 감히 통제하기 힘든 집단이 있습니다. 바로 주한미군입니다. 우리가 함부러 건들였다간 그들이 직접 나서기라도 하면 어떻게 될지 모릅니다. 그들도 현재 상황을 제대로 파악하지 못하는 듯 하니 우리가 먼저 접촉해 봅시다. "
  KOR_suppression_order:0 "시민운동 진압명령"
- KOR_suppression_order_desc:0 ""
- 
- Countermeasure_Conference:0 "대책회의"
- Countermeasure_Conference_desc:0 ""
+ KOR_suppression_order_desc:0 "혼란한 국내 정세에 전국적으로 시민들이 들고 일어나기 시작했습니다. 한반도가 타임 워프가 되었다는걸 믿지 못하고 독재를 위해 개소리를 한다고 믿는 국민부터, 이때를 틈타 나라를 전복시키려는 빨갱이들까지, 경찰 조직만으로는 역부족입니다. 최루탄 마저 다 떨어져 나가고 대도시 도로가 모두 점거 되었습니다.이대로 가다간 북한이 혼란사태를 알아차리고 남하 할지도 모릅니다.결국 정부는 군대를 동원하여 사회에 혼란을 일으키는 분자들은 진압하기로 결정했습니다."
+ Countermeasure_Conference:0 "대책 회의"
+ Countermeasure_Conference_desc:0 "국내 과격 분자들이 영남과 호남을 중심으로 궐기하더니 진압하라고 보낸 군 부대조차 오염되어 그들편에 서고 말았습니다. 대한민국은 또 다시 반으로 갈라지는 충격 사태에 돌입했습니다. 그러나 놀라 우왕좌왕할 시간이 없습니다. 우선 우리 편에 서기로 한 군인들을 파악하고 북한 개입에 대한 대책 등  논의해야 할게 많습니다."
  mobilization_order:0 "예비군 추가동원"
- mobilization_order_desc:0 ""
+ mobilization_order_desc:0 "정부는 바로 데프콘 2를 선포하였습니다. 이에 따라 전투준비태세를 비롯한 수많은 전시 조치들이 행해지고 있습니다. 그 조치들의 일환으로 현재 경기와 강원 지방의 예비군을 모두 소집 중입니다."
  Independent_Army_Corps:0 "독립군 장교단의 귀국"
- Independent_Army_Corps_desc:0 ""
+ Independent_Army_Corps_desc:0 "예비군 소집으로 병력으로 충원이 되었지만 이를 지휘할 장군들이 모자란 상태입니다. 이때 독립군 장교단을 귀국시키자는 얘기가 나왔습니다. 그들은 모두 열악한 상황 속의 게릴라전 명장들이니 큰 도움이 될 듯 합니다."
  emergency_measure:0 "비상대책법"
- emergency_measure_desc:0 ""
+ emergency_measure_desc:0 "정부는 데프콘 1으로 격상 조치와 함께 비상대책법을 발표 했습니다. 민간 기업을 징수하여 군 물자 생산에 총동원하기로 결정하며 북한에 대한 경계 강화 조치를 실행했습니다."
  indiscriminate_bombing_approval:0 "무차별 폭격?"
  indiscriminate_bombing_approval_desc:0 ""
  Offensive:0 "대공세"
- Offensive_desc:0 ""
+ Offensive_desc:0 "전시 체제로의 전환이 끝났습니다. 우리가 경기와 강원 지방에 대한 통제를 확보하고 있을 때 저들은 여전히 사회 혼란 분자들 때문에 골치를 겪는 듯 합니다. 지금이야 말로 공세를 통해 영향력을 확대 해야 할 때입니다."
  information_warfare:0 "정보전 돌입"
- information_warfare_desc:0 ""
+ information_warfare_desc:0 "知己知彼 百戰百勝(지피지기 백전백승) 전쟁은 정보전입니다. 적이 언제 어디로 처들어오는지, 병력은 얼마인지 알며 무서울 것이 없습니다. 다행히도 모든 국가 정보기관이 우리손에 있습니다. 이를 적극 이용하여 적들의 후방을 교란시킵시다."
  mkr_victory_in_the_civil_war:0 "내전에서의 승리"
- mkr_victory_in_the_civil_war_desc:0 ""
+ mkr_victory_in_the_civil_war_desc:0 "국내 소요 사태를 모두 진압하고 전국에 대한 영향력을 확보 했습니다. 아직 남아있는 빨치산들을 싸그리 정리하고 평화로운 대한민국으로 복귀 할 때입니다."
  
  sub_mod_kasche:0 "`아나키 서브모드`§H가 필요합니다.§!"
 
