--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -28,9 +28,10 @@
  korea.2.a:0 "오랜 숙원을 이룰 때이다!"
  korea.2.b:0 "성급히 판단해선 안 된다."
  
- korea.3.t:0 "1936년의 세계?"
- korea.3.d:0 "1991년이 끝나가던 날, 우리는 알 수 없는 기현상에 휩쓸렸습니다, 이 현상이 끝나고 정신을 차렸을 때의 우리는 기이한 세상으로 오고 만 뒤였습니다 대외적인 통신은 모두 끊겼고, 국민들은 이에 혼란해하고 있습니다. 또한 동해에서 초계 임무 중이던 제1함대가 일본 "해상자위대"가 아닌 일본"제국"의 함선과 접촉한 것 같다고 보고해왔습니다..."
- korea.3.a:0 "...뭐?"
+ korea.3.t:0 "Nsc 소집"
+ korea.3.d:0 "사태 발발 이후 30분 후 긴급 상황에 대부분의 회의 위원이 청와대 전화를 받고 오는 중이었다. “여보세요 국가안보실장, 지금 당장… 자리에 없다고? 일단 알겠네. 오거든 바로 청와대로 넘어오라 그래.” “각하 제가 휴대폰으로 걸어보겠습니다. …어 잠깐만 전파가 안뜨는데요?”
+“유선전화는 다 되는데 휴대폰이 안된다고요? emp면 둘 다 안돼야죠. 이게 도대체 어떻게 된거죠?” “위성이 격추 당하기라도 했다는거야 뭐야” 모든 연락망과 전파가 두절되었으며 무선통 신망이 완전히 망가졌습니다. 
+ korea.3.a:0 도대체, 이게 무슨 일인지.."
  
  korea.4.t:0 "경제의 붕괴"
  korea.4.d:0 "해외의 투자자들이 전부 사라지고, 원화 가치는 바닥으로 곤두박질치기 시작했습니다. 우리가 보유한 외환은 순식간에 휴지조각이 되어버렸고, 그 여파로 기업들이 연이어 붕괴하고 있습니다. 우리에게 닥친 사상 초유의 재난에 전국 곳곳에서 사재기 현상과 각종 강력범죄들이 기승을 부리고 있습니다. 건국 이래 이런 재난은 존재하지 않았습니다!"
@@ -94,9 +95,9 @@
  korea.300.d:0 "한반도가 혼란 상태로 빠진직후, 해군은 하나화와도,반란군과도 일절 협력하지 않겠다며 제주도와 울릉도의 기지를 점거하고 모든 함정을 그리로 옮겼습니다."
  korea.300.a:0 "이런 제기랄."
  
- korea.12.t:0 "항공자위대와 접촉하다."
- korea.12.d:0 "오늘아침 남해를 비행중이던 항공자위대 항공기가. 대구공항에 착륙허가를 요청하였습니다, 예정에없던일이라 당황하였지만 이들은 이상한이야기를 하고있었습니다. 자위대 비행장 관제탑과 연락은물론,방위성,항공자위대 사령부,그어떠한 곳과도 연락이되지않아 우리에게로 왔다고합니다. 우리는영문도모른채 일단 이들의 착륙을 허가하였습니다."
- korea.12.a:0 "이게대체 무슨일인지."
+ korea.12.t:0 "국방부 장관의 보고"
+ korea.12.d:0 "“각하” 회의를 시작하기도 전에 국방부 장관이 대통령에게 다가왔습니다. “일본 항공 자위대가 대구공항에 착륙 허가를 긴급히 요청해 우선 허가해 뒀습니다. 일본 통신망도 망가졌는지 관제탑과 사령부에도 연락이 되지 않는답니다.그리고…” “왜 그렇게 망설입니까 빨리 말해봐요.” “방금 동해상에서 일본 제국 함선과 접촉했다고 합니다.” “… 뭔소린가? 해상 자위대가 욱일기걸고 영해 침범이라도 했단말인가?” “아뇨, 각하 믿기 힘드시겠지만 실제 일제 시절 군함 모델과 군복을 입은 군인들을 발견됐습니다.”"
+ korea.12.a:0 "… 그걸 믿으라고?"
  
  korea.15.t:0 "항공자위대 항공기 합병?"
  korea.15.d:0 "전황이 점점 심각해짐에 따라, 대구공항에 일시 착륙했던 항공자위대의 항공기에대한 처분이 물위로 떠올랐습니다.주한 일본대사와 쓰시마의 해상자위대는 조종사와 장비의 반환을 강력 요구하고있지만. 정식 일본정부도없는 그들의 요구따위야 무시하면 그만일것입니다,하지만 현재 타임슬립한 해상자위대 호위대군이 무슨행동을취할지 전혀 알수없고,만약 이들이 적으로 돌아선다면 우리해군의 전멸을 각오해야할것입니다. 이 장비들을 어떻게 해야할까요?"
