--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -29,9 +29,8 @@
  korea.2.b:0 "성급히 판단해선 안 된다."
  
  korea.3.t:0 "Nsc 소집"
- korea.3.d:0 "사태 발발 이후 30분 후 긴급 상황에 대부분의 회의 위원이 청와대 전화를 받고 오는 중이었다. “여보세요 국가안보실장, 지금 당장… 자리에 없다고? 일단 알겠네. 오거든 바로 청와대로 넘어오라 그래.” “각하 제가 휴대폰으로 걸어보겠습니다. …어 잠깐만 전파가 안뜨는데요?”
-“유선전화는 다 되는데 휴대폰이 안된다고요? emp면 둘 다 안돼야죠. 이게 도대체 어떻게 된거죠?” “위성이 격추 당하기라도 했다는거야 뭐야” 모든 연락망과 전파가 두절되었으며 무선통 신망이 완전히 망가졌습니다. 
- korea.3.a:0 도대체, 이게 무슨 일인지.."
+ korea.3.d:0 "사태 발발 이후 30분 후 긴급 상황에 대부분의 회의 위원이 청와대 전화를 받고 오는 중이었다. “여보세요 국가안보실장, 지금 당장… 자리에 없다고? 일단 알겠네. 오거든 바로 청와대로 넘어오라 그래.” “각하 제가 휴대폰으로 걸어보겠습니다. …어 잠깐만 전파가 안뜨는데요?” “유선전화는 다 되는데 휴대폰이 안된다고요? emp면 둘 다 안돼야죠. 이게 도대체 어떻게 된거죠?” “위성이 격추 당하기라도 했다는거야 뭐야” \n모든 연락망과 전파가 두절되었으며 무선통 신망이 완전히 망가졌습니다. "
+ korea.3.a:0 "도대체, 이게 무슨 일인지.."
  
  korea.4.t:0 "경제의 붕괴"
  korea.4.d:0 "해외의 투자자들이 전부 사라지고, 원화 가치는 바닥으로 곤두박질치기 시작했습니다. 우리가 보유한 외환은 순식간에 휴지조각이 되어버렸고, 그 여파로 기업들이 연이어 붕괴하고 있습니다. 우리에게 닥친 사상 초유의 재난에 전국 곳곳에서 사재기 현상과 각종 강력범죄들이 기승을 부리고 있습니다. 건국 이래 이런 재난은 존재하지 않았습니다!"
