--- a/localisation/english/replace/kor_ideas_l_english.yml
+++ b/localisation/english/replace/kor_ideas_l_english.yml
@@ -278,8 +278,7 @@
  asiana:0 "금호아시아나"
  korean_air:0 "대한항공"
  hwanhwa:0 "한화"
- 
- gs:0 "호남정유"
+ honam:0 "호남정유"
  lg:0 "LGEI"
  sk:0 "SK"
  samsung:0 "삼성전자"
