--- a/localisation/english/replace/kor_parties_l_english.yml
+++ b/localisation/english/replace/kor_parties_l_english.yml
@@ -8,8 +8,17 @@
  KOR_fascism_party:0 "대한제국 복권파"
  KOR_fascism_party_long:0 "대한제국 복권파"
  
- MKR_communism_party:0 "조선노동당"
- MKR_communism_party_long:0 "조선노동당"
+ KR1_communism_party:0 "조선로동당"
+ KR1_communism_party_long:0 "조선로동당"
+ KR1_democratic_party:0 "민주정의당"
+ KR1_democratic_party_long:0 "민주정의당"
+ KR1_neutrality_party:0 "민주정의당"
+ KR1_neutrality_party_long:0 "민주정의당"
+ KR1_fascism_party:0 "하나회"
+ KR1_fascism_party_long:0 "하나회"
+ 
+ MKR_communism_party:0 "조선로동당"
+ MKR_communism_party_long:0 "조선로동당"
  MKR_democratic_party:0 "민주정의당"
  MKR_democratic_party_long:0 "민주정의당"
  MKR_neutrality_party:0 "민주정의당"
