--- a/localisation/english/TSK_character_l_english.yml
+++ b/localisation/english/TSK_character_l_english.yml
@@ -20,7 +20,7 @@
  KOR_kim_jaehwan:0 "김재환"
  KOR_jung_chunseong:0 "정춘성"
  KOR_im_chongbin:0 "임충빈"
- KOR_cho_junghwan:0 "조성환"
+ KOR_cho_junghwan:0 "조정환"
  KOR_park_hengryul:0 "박흥렬"
  KOR_kwon_ohsung:0 "권오성"
  KOR_lee_kyehoon:0 "이계훈"
@@ -32,7 +32,7 @@
  KOR_hwang_uidon:0 "황의돈"
  KOR_jung_seungjo:0 "정승조"
  KOR_kim_sangki:0 "김상기"
- KOR_lee_yongman:0 "이용만"
+ KOR_lee_yongman:0 "이영만"
  KOR_chung_kyungdoo:0 "정경두"
  KOR_choi_chakyu:0 "최차규"
  KOR_choi_yunhoi:0 "최윤희"
